# tree-sitter-languages-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  languages
example/: Cargo.toml
example/src/: main.rs
scripts/: generate
src/: lib.rs
